other/audit-event-on-exec/.chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: execevent-pod
  namespace: exec-event-ns
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      command: ["sleep","3600"]
