other/audit-event-on-exec/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: audit-event-on-exec
status:
  ready: true
